--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,13 @@
          <a href='{{ site.baseurl }}/dmca'>DMCA</a>
          <a href='{{ site.baseurl }}/2257'>18 U.S.C. 2257</a>
       </div>
+      
+      <script id="_wauauw">var _wau = _wau || []; _wau.push(["small", "v9penxy3qgqb", "auw"]);
+(function() {var s=document.createElement("script"); s.async=true;
+s.src="//widgets.amung.us/small.js";
+document.getElementsByTagName("head")[0].appendChild(s);
+})();</script>
+      
    </section>
 </footer>   
 
